test/cli/test/autogen/policy.yaml
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-common-labels
spec:
  admission: true
  background: true
  rules:
  - match:
      any:
      - resources:
          kinds:
          - Pod
    name: check-for-labels
    validate:
      failureAction: Enforce
      message: Both `app` and `owner` labels must be set on all workloads
      pattern:
        metadata:
          labels:
            app: ?*
            owner: ?*
